@@ -19,6 +19,7 @@ LEGEND
   [-] Offline messages may not be saved in the local message archive
   [-] History continues to load from a local file after switching to a server archive
   [-] When the replication of server archive is enabled than the ongoing chat could not completely copied to a local disk
+  [-] The main status could be displayed as "offline" even when one of the accounts is connected
 
 
 v1.0.1
